--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
               <td>관리자, 감독관</td>
               <td>2023.10.09</td>
               <td>
-                <a href="edit.html" class="text-decoration-none">
+                <a href="#" class="text-decoration-none">
                   <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil" viewBox="0 0 16 16">
     <path d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168l10-10zM11.207 2.5 13.5 4.793 14.793 3.5 12.5 1.207 11.207 2.5zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293l6.5-6.5zm-9.761 5.175-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325z"/>
   </svg>
@@ -149,14 +149,14 @@
                 </a>
               </td>
             </tr>
-            <tr>
+            <tr class="clickable" onclick="location.href='view.html?level=**&word=maintenance&meaning=유지보수&date=2023.10.09'">
               <td>2</td>
               <td>**</td>
               <td>maintenance</td>
               <td>유지보수</td>
               <td>2023.10.09</td>
               <td>
-                <a href="edit.html" class="text-decoration-none">
+                <a href="#" class="text-decoration-none">
                   <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil" viewBox="0 0 16 16">
     <path d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168l10-10zM11.207 2.5 13.5 4.793 14.793 3.5 12.5 1.207 11.207 2.5zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293l6.5-6.5zm-9.761 5.175-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325z"/>
   </svg>
@@ -169,14 +169,14 @@
                 </a>
               </td>
             </tr>
-            <tr>
+            <tr class="clickable" onclick="location.href='view.html?level=*&word=electric&meaning=전기의, 전기를 생산하는&date=2023.10.09'">
               <td>3</td>
               <td>*</td>
               <td>electric</td>
               <td>전기의, 전기를 생산하는</td>
               <td>2023.10.09</td>
               <td>
-                <a href="edit.html" class="text-decoration-none">
+                <a href="#" class="text-decoration-none">
                   <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil" viewBox="0 0 16 16">
     <path d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168l10-10zM11.207 2.5 13.5 4.793 14.793 3.5 12.5 1.207 11.207 2.5zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293l6.5-6.5zm-9.761 5.175-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325z"/>
   </svg>
@@ -189,14 +189,14 @@
                 </a>
               </td>
             </tr>
-            <tr>
+            <tr class="clickable" onclick="location.href='view.html?level=**&word=equipment&meaning=장비, 용품&date=2023.10.09'">
               <td>4</td>
               <td>**</td>
               <td>equipment</td>
               <td>장비, 용품</td>
               <td>2023.10.09</td>
               <td>
-                <a href="edit.html" class="text-decoration-none">
+                <a href="#" class="text-decoration-none">
                   <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil" viewBox="0 0 16 16">
     <path d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168l10-10zM11.207 2.5 13.5 4.793 14.793 3.5 12.5 1.207 11.207 2.5zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293l6.5-6.5zm-9.761 5.175-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325z"/>
   </svg>
@@ -209,14 +209,14 @@
                 </a>
               </td>
             </tr>
-            <tr>
+            <tr class="clickable" onclick="location.href='view.html?level=*&word=pole&meaning=기둥, 장대&date=2023.10.09'">
               <td>5</td>
               <td>*</td>
               <td>pole</td>
               <td>기둥, 장대</td>
               <td>2023.10.09</td>
               <td>
-                <a href="edit.html" class="text-decoration-none">
+                <a href="#" class="text-decoration-none">
                   <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil" viewBox="0 0 16 16">
     <path d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168l10-10zM11.207 2.5 13.5 4.793 14.793 3.5 12.5 1.207 11.207 2.5zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293l6.5-6.5zm-9.761 5.175-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325z"/>
   </svg>
@@ -229,14 +229,14 @@
                 </a>
               </td>
             </tr>
-            <tr>
+            <tr class="clickable" onclick="location.href='view.html?level=*&word=formerly&meaning=이전에, 예전에&date=2023.10.09'">
               <td>6</td>
               <td>*</td>
               <td>formerly</td>
               <td>이전에, 예전에</td>
               <td>2023.10.09</td>
               <td>
-                <a href="edit.html" class="text-decoration-none">
+                <a href="#" class="text-decoration-none">
                   <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil" viewBox="0 0 16 16">
     <path d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168l10-10zM11.207 2.5 13.5 4.793 14.793 3.5 12.5 1.207 11.207 2.5zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293l6.5-6.5zm-9.761 5.175-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325z"/>
   </svg>
@@ -249,14 +249,14 @@
                 </a>
               </td>
             </tr>
-            <tr>
+            <tr class="clickable" onclick="location.href='view.html?level=*&word=transfer&meaning=옮기다, 이동하다&date=2023.10.09'">
               <td>7</td>
               <td>*</td>
               <td>transfer</td>
               <td>옮기다, 이동하다</td>
               <td>2023.10.09</td>
               <td>
-                <a href="edit.html" class="text-decoration-none">
+                <a href="#" class="text-decoration-none">
                   <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil" viewBox="0 0 16 16">
     <path d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168l10-10zM11.207 2.5 13.5 4.793 14.793 3.5 12.5 1.207 11.207 2.5zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293l6.5-6.5zm-9.761 5.175-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325z"/>
   </svg>
@@ -269,14 +269,14 @@
                 </a>
               </td>
             </tr>
-            <tr>
+            <tr class="clickable" onclick="location.href='view.html?level=**&word=executive&meaning=경영 간부, 임원&date=2023.10.09'">
               <td>8</td>
               <td>**</td>
               <td>executive</td>
               <td>경영 간부, 임원</td>
               <td>2023.10.09</td>
               <td>
-                <a href="edit.html" class="text-decoration-none">
+                <a href="#" class="text-decoration-none">
                   <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil" viewBox="0 0 16 16">
     <path d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168l10-10zM11.207 2.5 13.5 4.793 14.793 3.5 12.5 1.207 11.207 2.5zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293l6.5-6.5zm-9.761 5.175-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325z"/>
   </svg>
@@ -289,14 +289,14 @@
                 </a>
               </td>
             </tr>
-            <tr>
+            <tr class="clickable" onclick="location.href='view.html?level=*&word=assure&meaning=안심시키다, 확신시키다&date=2023.10.09'">
               <td>9</td>
               <td>*</td>
               <td>assure</td>
               <td>안심시키다, 확신시키다</td>
               <td>2023.10.09</td>
               <td>
-                <a href="edit.html" class="text-decoration-none">
+                <a href="#" class="text-decoration-none">
                   <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil" viewBox="0 0 16 16">
     <path d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168l10-10zM11.207 2.5 13.5 4.793 14.793 3.5 12.5 1.207 11.207 2.5zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293l6.5-6.5zm-9.761 5.175-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325z"/>
   </svg>
@@ -309,14 +309,14 @@
                 </a>
               </td>
             </tr>
-            <tr>
+            <tr class="clickable" onclick="location.href='view.html?level=*&word=transfer&meaning=옮기다, 이동시키다&date=2023.10.09'">
               <td>10</td>
               <td>*</td>
               <td>transfer</td>
               <td>옮기다, 이동하다</td>
               <td>2023.10.09</td>
               <td>
-                <a href="edit.html" class="text-decoration-none">
+                <a href="#" class="text-decoration-none">
                   <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil" viewBox="0 0 16 16">
     <path d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168l10-10zM11.207 2.5 13.5 4.793 14.793 3.5 12.5 1.207 11.207 2.5zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293l6.5-6.5zm-9.761 5.175-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325z"/>
   </svg>
