--- a/add.html
+++ b/add.html
@@ -18,14 +18,14 @@
     <!-- 입력 칸 스타일 -->
     <style>
         input[type=text], select {
-            width: 210px;
+            width: 50%;
         }
     </style>
 
 <!-- 버튼 스타일 -->
     <style>
         .add-button {
-            margin-left: 150px;
+            margin-left: 80px;
         }
     </style>
 
