--- a/edit.html
+++ b/edit.html
@@ -74,7 +74,7 @@
 <div class="button-container" id="btnContainer">
   <button onclick="confirmEdit()">수정</button>
 <div class="button-container" id="btnContainer"></div>
-      <button type="button" onclick="location.href='index.html'">이전으로</button>    
+      <button type="button" onclick="location.href='index.html'">처음으로</button>    
 </div>
 
 <script type="text/javascript">
